[package]
name = "some-graphs-in-rust"
version = "0.1.0"
authors = ["valentinpi <valentinpickel@gmx.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.2"

[dependencies.sdl2]
git = "https://github.com/AngryLawyer/rust-sdl2"
